k8s/web/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: production
spec:
  # ... existing specs ...
  template:
    spec:
      containers:
        - name: web
          # ... existing container specs ...
          volumeMounts:
            - name: app-files
              mountPath: /usr/src/app
      volumes:
        - name: app-files
          emptyDir: {}
